test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 02 Jan 2026 16:55:11 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="CD13mHE/0KdlQBjDYmAtGKDeo4qTSU70", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}